# OpenIW4

./: CMakeLists.txt  OpenIW4.tagfile.xml  README.md  aabbtree_8h.html  action__slots_8h.html  actor__defines_8h.html  aim__assist_8cpp.html  aim__assist_8h.html  aim__input_8h.html  aim__target_8h.html  aim__target__mp_8cpp.html  allocator_8h.html  annotated.html  assertive_8cpp.html  assertive_8h.html  assetbuf_8cpp.html  assetbuf_8h.html  atgaudio_8cpp.html  atgaudio_8h.html  autoconfigure_8h.html  bg__animation__mp_8cpp.html  bg__enttype_8h.html  bg__jump_8cpp.html  bg__jump_8h.html  bg__local_8h.html  bg__mantle_8cpp.html  bg__mantle_8h.html  bg__misc_8cpp.html  bg__perks__mp_8cpp.html  bg__perks__mp_8h.html  bg__pmove_8cpp.html  bg__public_8h.html  bg__slidemove_8cpp.html  bg__weapon__state_8h.html  bg__weapons_8cpp.html  bg__weapons_8h.html  bg__weapons__ammo_8cpp.html  bg__weapons__ammo_8h.html  bg__weapons__db_8h.html  bg__weapons__load__db_8h.html  (+1233 more)
src/: CMakeLists.txt  stdafx.hpp
src/IW4/: CMakeLists.txt  snd.cpp
src/IW4/aim_assist/: aim_assist.cpp  aim_target_mp.cpp
src/IW4/bgame/: bg_animation_mp.cpp  bg_jump.cpp  bg_mantle.cpp  bg_misc.cpp  bg_perks_mp.cpp  bg_perks_mp.h  bg_pmove.cpp  bg_public.h  bg_weapons.cpp  bg_weapons.h  bg_weapons_ammo.cpp  bg_weapons_load_db.h  bg_weapons_load_obj.cpp  bg_weapons_setup.cpp  bg_weapons_util.cpp  bg_weapons_util.h  bg_weapons_view.cpp
src/IW4/cgame/: cg_ammocounter.cpp  cg_blur.cpp  cg_camerashake.cpp  cg_colltree.cpp  cg_compass.cpp  cg_draw_debug.cpp  cg_draw_indicators.cpp  cg_draw_net.cpp  cg_draw_reticles.cpp  cg_draw_splatter.cpp  cg_drawtools.cpp  cg_effects_load_db.h  cg_event.cpp  cg_glass.cpp  cg_hudelem.cpp  cg_info.cpp  cg_laser.cpp  cg_localents.cpp  cg_modelpreviewer.cpp  cg_motiontracker.cpp  cg_playerstate.cpp  cg_rearview.cpp  cg_rumble.cpp  cg_shellshock.cpp  cg_sound.cpp  cg_soundmixergui.cpp  cg_view.cpp  cg_visionsets.cpp  cg_weapons.cpp  cg_world.cpp  offhandweapons.cpp
src/IW4/cgame_mp/: cg_animtree_mp.cpp  cg_compassfriendlies_mp.cpp  cg_consolecmds_mp.cpp  cg_draw_mp.cpp  cg_draw_net_mp.cpp  cg_ents_mp.cpp  cg_gamepad.cpp  cg_local_mp.h  cg_main_mp.cpp  cg_newdraw_mp.cpp  cg_players_mp.cpp  cg_pose_mp.cpp  cg_pose_mp.h  cg_predict_mp.cpp  cg_scoreboard_mp.cpp  (+3 more)
src/patches/: CMakeLists.txt  main.cpp
(+542 files in other folders)
